# girlhacks_2024

./: Cargo.toml  README.md
assets/: jukebox.html  songLyric.html
src/: main.rs
